tests/sawn/fixtures/invalid/23_key_equals_no_continuation.sawn
// INVALID: key= with no value and no indented continuation
description=
next_key="value"
